Removed 2-day planet from gl876, for a test.

--- a/Notebook_Tables.ipynb
+++ b/Notebook_Tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,14 +233,14 @@
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\midrule' + ' \\n')\n",
     "tex_writer.write('\\n')\n",
-    "tex_writer.write(r'CPS Name & Lit. Name & \\msini\\ [\\mjup] & a [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
+    "tex_writer.write(r'CPS Name & Lit. Name & \\msini\\ [\\mjup] & $a$ [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\endfirsthead' + ' \\n')\n",
     "tex_writer.write(r'\\caption[]{Planet Catalog (Continued)}' + r' \\\\')\n",
     "tex_writer.write('\\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\midrule' + ' \\n')\n",
-    "tex_writer.write(r'CPS Name & Lit. Name & \\msini\\ [\\mjup] & a [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
+    "tex_writer.write(r'CPS Name & Lit. Name & \\msini\\ [\\mjup] & $a$ [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\endhead' + ' \\n')\n",
     "\n",
@@ -266,9 +266,9 @@
     "        mass_minus_str += '0'    \n",
     "    \n",
     "    if mass_str[-2:] == '.0' and mass_plus_str[-2:] == '.0' and mass_minus_str[-2:] == '.0':\n",
-    "        mass_str = mass_str[-2:]\n",
-    "        mass_plus_str = mass_plus_str[-2:]\n",
-    "        mass_minus_str = mass_minus_str[-2:]\n",
+    "        mass_str = mass_str[:-2]\n",
+    "        mass_plus_str = mass_plus_str[:-2]\n",
+    "        mass_minus_str = mass_minus_str[:-2]\n",
     "        \n",
     "    axis_str = str(row['axis_med_r'])\n",
     "    axis_plus_str  = str(row['axis_err_plus_r'])\n",
@@ -279,9 +279,9 @@
     "        axis_minus_str += '0' \n",
     "        \n",
     "    if axis_str[-2:] == '.0' and axis_plus_str[-2:] == '.0' and axis_minus_str[-2:] == '.0':\n",
-    "        axis_str = axis_str[-2:]\n",
-    "        axis_plus_str = axis_plus_str[-2:]\n",
-    "        axis_minus_str = axis_minus_str[-2:]\n",
+    "        axis_str = axis_str[:-2]\n",
+    "        axis_plus_str = axis_plus_str[:-2]\n",
+    "        axis_minus_str = axis_minus_str[:-2]\n",
     "        \n",
     "    per_str = str(row['per_med_r'])\n",
     "    per_plus_str  = str(row['per_err_plus_r'])\n",
@@ -292,9 +292,9 @@
     "        per_minus_str += '0' \n",
     "        \n",
     "    if per_str[-2:] == '.0' and per_plus_str[-2:] == '.0' and per_minus_str[-2:] == '.0':\n",
-    "        per_str = per_str[-2:]\n",
-    "        per_plus_str = per_plus_str[-2:]\n",
-    "        per_minus_str = per_minus_str[-2:]\n",
+    "        per_str = per_str[:-2]\n",
+    "        per_plus_str = per_plus_str[:-2]\n",
+    "        per_minus_str = per_minus_str[:-2]\n",
     "        \n",
     "    ecc_str = str(row['e_med_r'])\n",
     "    ecc_plus_str  = str(row['e_err_plus_r'])\n",
@@ -303,6 +303,31 @@
     "        ecc_plus_str += '0'\n",
     "    elif len(ecc_plus_str) > len(ecc_minus_str) and (ecc_plus_str[:2] == '0.' or ecc_minus_str[:2] == '0.'):\n",
     "        ecc_minus_str += '0'\n",
+    "        \n",
+    "    # Solve SI issues, for period.\n",
+    "    if 'e' in per_str and 'e' in per_plus_str:\n",
+    "        meanbase, meanexp   = str.split(per_str, sep='e')\n",
+    "        if meanexp[1] == '0':\n",
+    "            meanexp = '-' + meanexp[-1]\n",
+    "        plusbase, plusexp = str.split(per_plus_str, sep='e')\n",
+    "        if plusexp[1] == '0':\n",
+    "            plusexp = '-' + plusexp[-1]\n",
+    "        minusbase, minusexp = str.split(per_minus_str, sep='e')\n",
+    "        if minusexp[1] == '0':\n",
+    "            minusexp =  '-' + minusexp[-1]\n",
+    "        per_str       = meanbase + '*10^{' + meanexp + '}'\n",
+    "        per_plus_str  = plusbase + '*10^{' + plusexp + '}'\n",
+    "        per_minus_str = minusbase + '*10^{' + minusexp + '}'  #'{0}*10^{1}'.format(minusbase, minusexp)\n",
+    " \n",
+    "    elif 'e' in per_plus_str and (not 'e' in per_str):\n",
+    "        plusbase, plusexp   = str.split(per_plus_str, sep='e')\n",
+    "        if plusexp[1] == '0':\n",
+    "            plusexp = '-' + plusexp[-1]\n",
+    "        minusbase, minusexp = str.split(per_minus_str, sep='e')\n",
+    "        if minusexp[1] == '0':\n",
+    "            minusexp = '-' + minusexp[-1]\n",
+    "        per_plus_str  = plusbase + '*10^{' + plusexp + '}'\n",
+    "        per_minus_str = minusbase + '*10^{' + minusexp + '}'  #'{0}*10^{1}'.format(minusbase, minusexp)\n",
     "        \n",
     "    massin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(mass_str, mass_plus_str, mass_minus_str) + r'$'    \n",
     "    axisin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(axis_str, axis_plus_str, axis_minus_str) + r'$'    \n",
@@ -456,7 +481,7 @@
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\midrule' + ' \\n')\n",
     "tex_writer.write('\\n')\n",
-    "tex_writer.write(r'CPS Name & Lit. Name & \\msini\\ [\\mjup] & a [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
+    "tex_writer.write(r'CPS Name & Lit. Name & \\msini\\ [\\mjup] & $a$ [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "\n",
     "for index, row in masses_candidate.iterrows():\n",
@@ -633,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,14 +1154,14 @@
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\midrule' + ' \\n')\n",
     "tex_writer.write('\\n')\n",
-    "tex_writer.write(r'Name & \\msini\\ [\\mjup] & a [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
+    "tex_writer.write(r'Name & \\msini\\ [\\mjup] & $a$ [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\endfirsthead' + ' \\n')\n",
     "tex_writer.write(r'\\caption[]{Binary and Substellar Catalog (Continued)}' + r' \\\\')\n",
     "tex_writer.write('\\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\midrule' + ' \\n')\n",
-    "tex_writer.write(r'Name & \\msini\\ [\\mjup] & a [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
+    "tex_writer.write(r'Name & \\msini\\ [\\mjup] & $a$ [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\endhead' + ' \\n')\n",
     "\n",
@@ -1161,6 +1186,11 @@
     "    elif len(mass_plus_str) > len(mass_minus_str) and (mass_plus_str[:2] == '0.' or mass_minus_str[:2] == '0.'):\n",
     "        mass_minus_str += '0'    \n",
     "        \n",
+    "    if mass_str[-2:] == '.0' and mass_plus_str[-2:] == '.0' and mass_minus_str[-2:] == '.0':\n",
+    "        mass_str = mass_str[:-2]\n",
+    "        mass_plus_str = mass_plus_str[:-2]\n",
+    "        mass_minus_str = mass_minus_str[:-2]\n",
+    "        \n",
     "    axis_str = str(row['axis_med_r'])\n",
     "    axis_plus_str  = str(row['axis_err_plus_r'])\n",
     "    axis_minus_str = str(row['axis_err_minus_r'])\n",
@@ -1169,13 +1199,23 @@
     "    elif len(axis_plus_str) > len(axis_minus_str) and (axis_plus_str[:2] == '0.' or axis_minus_str[:2] == '0.'):\n",
     "        axis_minus_str += '0' \n",
     "        \n",
+    "    if axis_str[-2:] == '.0' and axis_plus_str[-2:] == '.0' and axis_minus_str[-2:] == '.0':\n",
+    "        axis_str = axis_str[:-2]\n",
+    "        axis_plus_str = axis_plus_str[:-2]\n",
+    "        axis_minus_str = axis_minus_str[:-2]\n",
+    "        \n",
     "    per_str = str(row['per_med_r'])\n",
     "    per_plus_str  = str(row['per_err_plus_r'])\n",
     "    per_minus_str = str(row['per_err_minus_r'])\n",
     "    if len(per_plus_str) < len(per_minus_str) and (per_plus_str[:2] == '0.' or per_minus_str[:2] == '0.'):\n",
     "        per_plus_str += '0'\n",
     "    elif len(per_plus_str) > len(per_minus_str) and (per_plus_str[:2] == '0.' or per_minus_str[:2] == '0.'):\n",
-    "        per_minus_str += '0' \n",
+    "        per_minus_str += '0'\n",
+    "        \n",
+    "    if per_str[-2:] == '.0' and per_plus_str[-2:] == '.0' and per_minus_str[-2:] == '.0':\n",
+    "        per_str = per_str[:-2]\n",
+    "        per_plus_str = per_plus_str[:-2]\n",
+    "        per_minus_str = per_minus_str[:-2]\n",
     "        \n",
     "    ecc_str = str(row['e_med_r'])\n",
     "    ecc_plus_str  = str(row['e_err_plus_r'])\n",
@@ -1215,37 +1255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "$0.00036\\pm 0.00012$\n",
-      "$1.89*10^{-6}\\pm 1.2*10^{-7}$\n",
-      "$-6.05*10^{-6}\\pm 6.9*10^{-7}$\n",
-      "$2.25*10^{-6}\\pm 3*10^{-7}$\n",
-      "$-9.3*10^{-7}\\pm 1.1*10^{-7}$\n",
-      "$-4.27*10^{-6}\\pm 1.1*10^{-7}$\n",
-      "$-9.03*10^{-6}\\pm 8.6*10^{-7}$\n",
-      "$-3.23*10^{-7}\\pm 5.6*10^{-8}$\n",
-      "$-4.32*10^{-7}\\pm 6*10^{-8}$\n",
-      "$-5.2*10^{-7}\\pm 1.5*10^{-7}$\n",
-      "$-8.76*10^{-7}\\pm 9.6*10^{-8}$\n",
-      "$-4.09*10^{-7}\\pm 6*10^{-8}$\n",
-      "$-6*10^{-7}\\pm 1.7*10^{-7}$\n",
-      "$-4.41*10^{-6}\\pm 2.4*10^{-7}$\n",
-      "$-4.61*10^{-6}\\pm 4.3*10^{-7}$\n",
-      "$-2.21*10^{-5}\\pm 3.8*10^{-6}$\n",
-      "$-2.96*10^{-5}\\pm 5.5*10^{-6}$\n",
-      "$-4.3*10^{-6}\\pm 1.8*10^{-7}$\n",
-      "$-3.17*10^{-6}\\pm 3.9*10^{-7}$\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trends_curv = trends.query('curv == curv')\n",
     "#pdb.set_trace()\n",
@@ -1274,17 +1288,16 @@
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\midrule' + ' \\n')\n",
     "tex_writer.write('\\n')\n",
-    "tex_writer.write(r'Name & $\\dot \\gamma$ [m/s/yr] & $\\ddot \\gamma$ [m/s$^2$/yr] \\\\' + ' \\n')\n",
+    "tex_writer.write(r'Name & $\\dot \\gamma$ [m s$^{-1}$ d$^{-1}$] & $\\ddot \\gamma$ [m s$^{-1}$ d$^{-2}$] \\\\' + ' \\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\endfirsthead' + ' \\n')\n",
     "tex_writer.write(r'\\caption[]{Long Term Trends (Continued)}' + r' \\\\')\n",
     "tex_writer.write('\\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\midrule' + ' \\n')\n",
-    "tex_writer.write(r'Name & $\\dot \\gamma$ [m/s/yr] & $\\ddot \\gamma$ [m/s$^2$/yr] \\\\' + ' \\n')\n",
+    "tex_writer.write(r'Name & $\\dot \\gamma$ [m s$^{-1}$ d$^{-1}$] & $\\ddot \\gamma$ [m s$^{-1}$ d$^{-2}$] \\\\' + ' \\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\endhead' + ' \\n')\n",
-    "#tex_writer.write(r'Name & dvdt & curvature \\\\' + ' \\n')\n",
     "\n",
     "for index, row in trends.iterrows():\n",
     "    # Customize names.\n",
@@ -1307,17 +1320,23 @@
     "        meanstr = str(row['curv_med_r'].to_list()[0])\n",
     "        errstr  = str(row['curv_err_av'].to_list()[0])\n",
     "\n",
-    "        if 'e' in meanstr:\n",
+    "        if 'e' in meanstr and 'e' in errstr:\n",
     "            meanbase, meanexp = str.split(meanstr, sep='e')\n",
     "            errbase, errexp = str.split(errstr, sep='e')\n",
-    "            #print(meanbase, meanexp)\n",
     "            curvin = r'$' + '{0}*10^{1}\\\\pm {2}*10^{3}'.format(meanbase, \n",
-    "                                                               '{-' + meanexp[-1] + '}', \n",
-    "                                                                 errbase, \n",
+    "                                                               '{-' + meanexp[-1] + '}', errbase, \n",
     "                                                               '{-' + errexp[-1]) + '}' + r'$'\n",
+    "        elif 'e' in errstr and (not 'e' in meanstr):\n",
+    "            errbase, errexp = str.split(errstr, sep='e')\n",
+    "            curvin = r'$' + '{0}\\\\pm {1}*10^{2}'.format(meanstr, errbase, \n",
+    "                                                        '{-' + errexp[-1]) + '}' + r'$'\n",
+    "        elif 'e' in meanstr and (not 'e' in errstr):\n",
+    "            meanbase, meanexp = str.split(meanstr, sep='e')\n",
+    "            curvin = r'$' + '{0}*10^{1}\\\\pm {2}'.format(meanbase, \n",
+    "                                                               '{-' + meanexp[-1] + '}', \n",
+    "                                                                 errstr) + r'$'\n",
     "        else:\n",
     "            curvin = r'$' + '{0}\\\\pm {1}'.format(meanstr, errstr) + r'$'    \n",
-    "        print(curvin)\n",
     "    else:\n",
     "        curvin = '0'\n",
     "\n",
