--- a/legacy_tables/tex_tables/trends_table.tex
+++ b/legacy_tables/tex_tables/trends_table.tex
@@ -3,13 +3,13 @@
 \toprule 
 \midrule 
 
-Name & $\dot \gamma$ [m/s/yr] & $\ddot \gamma$ [m/s$^2$/yr] \\ 
+Name & $\dot \gamma$ [m s$^{-1}$ d$^{-1}$] & $\ddot \gamma$ [m s$^{-1}$ d$^{-2}$] \\ 
 \toprule 
 \endfirsthead 
 \caption[]{Long Term Trends (Continued)} \\
 \toprule 
 \midrule 
-Name & $\dot \gamma$ [m/s/yr] & $\ddot \gamma$ [m/s$^2$/yr] \\ 
+Name & $\dot \gamma$ [m s$^{-1}$ d$^{-1}$] & $\ddot \gamma$ [m s$^{-1}$ d$^{-2}$] \\ 
 \toprule 
 \endhead 
 HD 153557 & $0.0095\pm 0.0017$ & 0 \\ 
