Added 42581 to trend list.

--- a/Notebook_Tables.ipynb
+++ b/Notebook_Tables.ipynb
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -1423,54 +1423,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>87809</th>\n",
-       "      <td>95128</td>\n",
-       "      <td>j</td>\n",
-       "      <td>rj67.734</td>\n",
-       "      <td>2.454930e+06</td>\n",
-       "      <td>-2.252112</td>\n",
-       "      <td>1.364153</td>\n",
-       "      <td>0.159</td>\n",
+       "      <th>0</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>k</td>\n",
+       "      <td>rk9.173</td>\n",
+       "      <td>2.450463e+06</td>\n",
+       "      <td>-1.925464</td>\n",
+       "      <td>0.977371</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87810</th>\n",
-       "      <td>95128</td>\n",
-       "      <td>j</td>\n",
-       "      <td>rj68.131</td>\n",
-       "      <td>2.454955e+06</td>\n",
-       "      <td>-1.052739</td>\n",
-       "      <td>1.189354</td>\n",
-       "      <td>0.159</td>\n",
+       "      <th>1</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>k</td>\n",
+       "      <td>rk15.119</td>\n",
+       "      <td>2.450715e+06</td>\n",
+       "      <td>-6.761341</td>\n",
+       "      <td>1.080576</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87811</th>\n",
-       "      <td>95128</td>\n",
-       "      <td>j</td>\n",
-       "      <td>rj69.122</td>\n",
-       "      <td>2.454964e+06</td>\n",
-       "      <td>8.094488</td>\n",
-       "      <td>1.353151</td>\n",
-       "      <td>0.160</td>\n",
+       "      <th>2</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>k</td>\n",
+       "      <td>rk17.27</td>\n",
+       "      <td>2.450806e+06</td>\n",
+       "      <td>-6.109546</td>\n",
+       "      <td>1.073605</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87812</th>\n",
-       "      <td>95128</td>\n",
-       "      <td>j</td>\n",
-       "      <td>rj70.154</td>\n",
-       "      <td>2.454984e+06</td>\n",
-       "      <td>11.618073</td>\n",
-       "      <td>1.592626</td>\n",
-       "      <td>0.160</td>\n",
+       "      <th>3</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>k</td>\n",
+       "      <td>rk17.172</td>\n",
+       "      <td>2.450807e+06</td>\n",
+       "      <td>-1.854198</td>\n",
+       "      <td>1.173251</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87813</th>\n",
-       "      <td>95128</td>\n",
-       "      <td>j</td>\n",
-       "      <td>rj70.437</td>\n",
-       "      <td>2.454985e+06</td>\n",
-       "      <td>8.088678</td>\n",
-       "      <td>1.386373</td>\n",
-       "      <td>0.153</td>\n",
+       "      <th>4</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>k</td>\n",
+       "      <td>rk18.25</td>\n",
+       "      <td>2.450838e+06</td>\n",
+       "      <td>-6.045398</td>\n",
+       "      <td>1.069229</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1483,89 +1483,89 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88639</th>\n",
-       "      <td>95128</td>\n",
-       "      <td>lick</td>\n",
-       "      <td>ri58.86</td>\n",
-       "      <td>2.455229e+06</td>\n",
-       "      <td>56.444183</td>\n",
-       "      <td>7.413153</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>103986</th>\n",
+       "      <td>223691</td>\n",
+       "      <td>j</td>\n",
+       "      <td>rj02.159</td>\n",
+       "      <td>2.453302e+06</td>\n",
+       "      <td>-5.883925</td>\n",
+       "      <td>1.065892</td>\n",
+       "      <td>0.1450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88640</th>\n",
-       "      <td>95128</td>\n",
-       "      <td>lick</td>\n",
-       "      <td>ri58.87</td>\n",
-       "      <td>2.455229e+06</td>\n",
-       "      <td>54.623985</td>\n",
-       "      <td>7.084578</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>103987</th>\n",
+       "      <td>223691</td>\n",
+       "      <td>j</td>\n",
+       "      <td>rj11.996</td>\n",
+       "      <td>2.453605e+06</td>\n",
+       "      <td>8.420764</td>\n",
+       "      <td>0.950408</td>\n",
+       "      <td>0.1450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88641</th>\n",
-       "      <td>95128</td>\n",
-       "      <td>lick</td>\n",
-       "      <td>ri62.93</td>\n",
-       "      <td>2.455313e+06</td>\n",
-       "      <td>46.871433</td>\n",
-       "      <td>4.576725</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>103988</th>\n",
+       "      <td>223691</td>\n",
+       "      <td>j</td>\n",
+       "      <td>rj231.531</td>\n",
+       "      <td>2.457571e+06</td>\n",
+       "      <td>2.101613</td>\n",
+       "      <td>1.528130</td>\n",
+       "      <td>0.1487</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88642</th>\n",
-       "      <td>95128</td>\n",
-       "      <td>lick</td>\n",
-       "      <td>ri62.94</td>\n",
-       "      <td>2.455313e+06</td>\n",
-       "      <td>52.812397</td>\n",
-       "      <td>4.210793</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>103989</th>\n",
+       "      <td>223691</td>\n",
+       "      <td>j</td>\n",
+       "      <td>rj278.1062</td>\n",
+       "      <td>2.458118e+06</td>\n",
+       "      <td>-4.154183</td>\n",
+       "      <td>1.179824</td>\n",
+       "      <td>0.1454</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88643</th>\n",
-       "      <td>95128</td>\n",
-       "      <td>lick</td>\n",
-       "      <td>ri62.95</td>\n",
-       "      <td>2.455313e+06</td>\n",
-       "      <td>53.207039</td>\n",
-       "      <td>3.980602</td>\n",
+       "      <th>103990</th>\n",
+       "      <td>223691</td>\n",
+       "      <td>j</td>\n",
+       "      <td>rj309.71</td>\n",
+       "      <td>2.458437e+06</td>\n",
+       "      <td>-6.633734</td>\n",
+       "      <td>1.161923</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>835 rows × 7 columns</p>\n",
+       "<p>103991 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        name   tel      obnm            jd      mnvel    errvel   sval\n",
-       "87809  95128     j  rj67.734  2.454930e+06  -2.252112  1.364153  0.159\n",
-       "87810  95128     j  rj68.131  2.454955e+06  -1.052739  1.189354  0.159\n",
-       "87811  95128     j  rj69.122  2.454964e+06   8.094488  1.353151  0.160\n",
-       "87812  95128     j  rj70.154  2.454984e+06  11.618073  1.592626  0.160\n",
-       "87813  95128     j  rj70.437  2.454985e+06   8.088678  1.386373  0.153\n",
-       "...      ...   ...       ...           ...        ...       ...    ...\n",
-       "88639  95128  lick   ri58.86  2.455229e+06  56.444183  7.413153    NaN\n",
-       "88640  95128  lick   ri58.87  2.455229e+06  54.623985  7.084578    NaN\n",
-       "88641  95128  lick   ri62.93  2.455313e+06  46.871433  4.576725    NaN\n",
-       "88642  95128  lick   ri62.94  2.455313e+06  52.812397  4.210793    NaN\n",
-       "88643  95128  lick   ri62.95  2.455313e+06  53.207039  3.980602    NaN\n",
+       "          name tel        obnm            jd     mnvel    errvel    sval\n",
+       "0        10002   k     rk9.173  2.450463e+06 -1.925464  0.977371     NaN\n",
+       "1        10002   k    rk15.119  2.450715e+06 -6.761341  1.080576     NaN\n",
+       "2        10002   k     rk17.27  2.450806e+06 -6.109546  1.073605     NaN\n",
+       "3        10002   k    rk17.172  2.450807e+06 -1.854198  1.173251     NaN\n",
+       "4        10002   k     rk18.25  2.450838e+06 -6.045398  1.069229     NaN\n",
+       "...        ...  ..         ...           ...       ...       ...     ...\n",
+       "103986  223691   j    rj02.159  2.453302e+06 -5.883925  1.065892  0.1450\n",
+       "103987  223691   j    rj11.996  2.453605e+06  8.420764  0.950408  0.1450\n",
+       "103988  223691   j   rj231.531  2.457571e+06  2.101613  1.528130  0.1487\n",
+       "103989  223691   j  rj278.1062  2.458118e+06 -4.154183  1.179824  0.1454\n",
+       "103990  223691   j    rj309.71  2.458437e+06 -6.633734  1.161923     NaN\n",
        "\n",
-       "[835 rows x 7 columns]"
+       "[103991 rows x 7 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_select.query('name == \"95128\"')"
+    "data_select#.query('name == \"95128\"')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1574,10 +1574,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "teldict = {'k':'HIRES pre-2004', 'j':'HIRES post-2004 ', 'apf':'APF', 'lick':'Lick'}\n",
+    "\n",
     "tex_writer = open('legacy_tables/tex_tables/data_table.tex', 'w')\n",
     "tex_writer.write(r'\\begin{longtable*}{lrrrrr}')\n",
     "tex_writer.write('\\n')\n",
@@ -1611,8 +1613,7 @@
     "    else:\n",
     "        namein = 'HD ' + namein.upper()\n",
     "\n",
-    "    telstr    = row['tel']\n",
-    "    #obsstr    = \n",
+    "    telstr    = teldict[row['tel']]\n",
     "    jdstr     = str(round(row['jd'] - 2455000, 4))\n",
     "    mnvelstr  = str(round(row['mnvel'], 2))\n",
     "    errvelstr = str(round(row['errvel'], 2))\n",
@@ -1628,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1638,7 @@
        "103991"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
