--- a/legacy_tables/tex_tables/data_table.tex
+++ b/legacy_tables/tex_tables/data_table.tex
@@ -1,26 +1,29 @@
 \begin{longtable*}{lrrrrr}
 \caption{Sample of RV Data} \\
-\toprule
-\midrule
+\toprule 
+\midrule 
 
-Name & Inst. & BJD - 2455000 & $RV$ [m/s] & $\sigma_{RV}$ [m/s] & S-Value \\
-\toprule
-\endfirsthead
+Name & Inst. & BJD - 2455000 & $RV$ [m/s] & $\sigma_{RV}$ [m/s] & S-Value \\ 
+\toprule 
+\endfirsthead 
 \caption[]{Sample of RV Data (Continued)} \\
-\toprule
-\midrule
-Name & Inst. & BJD - 2455000 & $RV$ [m/s] & $\sigma_{RV}$ [m/s] & S-Value \\
-\toprule
+\toprule 
+\midrule 
+Name & Inst. & BJD - 2455000 & $RV$ [m/s] & $\sigma_{RV}$ [m/s] & S-Value \\ 
+\toprule 
 \endhead 
-HD 156668 & j & -1521.0223 & -0.16 & 0.95 & 0.201 \\
-HD 156668 & j & -1452.0904 & -3.27 & 1.01 & 0.214 \\
-HD 156668 & j & -1395.1611 & -4.5 & 0.99 & 0.212 \\
-HD 156668 & j & -1192.8559 & 2.91 & 1.08 & 0.222 \\
-HD 156668 & j & -1067.0813 & 1.47 & 0.97 & 0.229 \\
-HD 156668 & j & -1039.086 & 3.71 & 0.89 & 0.22 \\
-HD 156668 & j & -1038.1904 & -0.16 & 0.96 & 0.219 \\
-HD 156668 & j & -1018.2294 & 4.19 & 0.87 & 0.231 \\
-HD 156668 & j & -1017.1234 & 2.06 & 0.92 & 0.233 \\
-HD 156668 & j & -1016.1809 & 5.74 & 0.89 & 0.23 \\
-\bottomrule
-\end{longtable*}
+HD 156668 & HIRES pre-2004 & -2167.0766 & -0.05 & 1.62 & nan \\ 
+HD 156668 & HIRES pre-2004 & -1925.896 & -7.08 & 1.68 & nan \\ 
+HD 156668 & HIRES pre-2004 & -1803.1301 & -2.67 & 1.72 & nan \\ 
+HD 156668 & HIRES post-2004  & -1521.0223 & -0.16 & 0.95 & 0.201 \\ 
+HD 156668 & HIRES post-2004  & -1452.0904 & -3.27 & 1.01 & 0.214 \\ 
+HD 156668 & HIRES post-2004  & -1395.1611 & -4.5 & 0.99 & 0.212 \\ 
+HD 156668 & HIRES post-2004  & -1192.8559 & 2.91 & 1.08 & 0.222 \\ 
+HD 156668 & HIRES post-2004  & -1067.0813 & 1.47 & 0.97 & 0.229 \\ 
+HD 156668 & HIRES post-2004  & -1039.086 & 3.71 & 0.89 & 0.22 \\ 
+HD 156668 & HIRES post-2004  & -1038.1904 & -0.16 & 0.96 & 0.219 \\ 
+HD 156668 & HIRES post-2004  & -1018.2294 & 4.19 & 0.87 & 0.231 \\ 
+HD 156668 & HIRES post-2004  & -1017.1234 & 2.06 & 0.92 & 0.233 \\ 
+HD 156668 & HIRES post-2004  & -1016.1809 & 5.74 & 0.89 & 0.23 \\ 
+\bottomrule 
+\end{longtable*} 
